deploy/managed/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multicluster-operators-subscription
  namespace: open-cluster-management-agent-addon
  labels:
    name: multicluster-operators-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      name: multicluster-operators-subscription
  template:
    metadata:
      labels:
        name: multicluster-operators-subscription
    spec:
      serviceAccountName: multicluster-operators
      volumes:
      - name: klusterlet-config
        secret:
          defaultMode: 420
          secretName: application-manager-hub-kubeconfig
      containers:
        - name: multicluster-operators-subscription
          image: quay.io/open-cluster-management/multicluster-operators-subscription:latest
          ports:
          - containerPort: 8443
          command:
          - /usr/local/bin/multicluster-operators-subscription
          - --alsologtostderr
          - --cluster-name=managed_cluster_name # cluster1
          - --hub-cluster-configfile=/var/run/klusterlet/kubeconfig
          imagePullPolicy: IfNotPresent
          resources:
              requests:
                cpu: 100m
                memory: 128Mi
          volumeMounts:
          - mountPath: /var/run/klusterlet
            name: klusterlet-config
